[gd_scene load_steps=6 format=3 uid="uid://b8c1y6kj8h0"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_title"]

[sub_resource type="Shader" id="Shader_scanlines"]
code = "shader_type canvas_item;

uniform float scan_line_opacity : hint_range(0.0, 1.0) = 0.15;
uniform float scroll_speed = 0.5;
uniform vec4 grid_color : source_color = vec4(1.0, 0.0, 0.0, 1.0);

void fragment() {
    // Grid pattern
    vec2 grid_uv = UV * 40.0;
    grid_uv.y += TIME * scroll_speed;
    
    float grid_x = abs(fract(grid_uv.x - 0.5) - 0.5) * 2.0;
    float grid_y = abs(fract(grid_uv.y - 0.5) - 0.5) * 2.0;
    
    float grid = min(grid_x, grid_y);
    grid = smoothstep(0.1, 0.2, grid);
    
    // Add some depth effect
    float depth = (1.0 - UV.y) * 0.5;
    
    // Scan line effect
    float scan_line = sin(UV.y * 100.0 + TIME * scroll_speed) * 0.5 + 0.5;
    scan_line = pow(scan_line, 10.0) * scan_line_opacity;
    
    // Combine effects
    vec4 grid_result = mix(grid_color, vec4(0.0), grid + depth);
    COLOR = grid_result + vec4(1.0, 1.0, 1.0, scan_line);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scanlines"]
shader = SubResource("Shader_scanlines")
shader_parameter/scan_line_opacity = 0.15
shader_parameter/scroll_speed = 0.2
shader_parameter/grid_color = Color(0.6, 0, 0, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.3, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 0.4)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.03, 1)

[node name="GridBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_scanlines")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScanLines" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.4)
material = SubResource("ShaderMaterial_scanlines")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="GameJamBanner" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.1, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "BATTLE ROYALE GAME JAM 2025"
horizontal_alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.2, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 96
text = "SCANANA"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Scan everything...
except the banana!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Start Scanning"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Quit"
